# rpc-bench

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  ARCH.md  LICENSE  README.md  meson.build
include/rpcbench/: bench.hpp  config.hpp  metrics.hpp  rpc.hpp  storage.hpp
schemas/: kv.capnp
scripts/: coverage.py
src/: bench.cpp  bench_main.cpp  config.cpp  meson.build  metrics.cpp  rpc.cpp  server_main.cpp  storage.cpp
src/app/: application.cpp  application.hpp  meson.build
src/bench/: benchmark.cpp  benchmark.hpp  main.cpp  meson.build
src/protocol/: common.cpp  common.hpp  crc32.cpp  crc32.hpp  framing.hpp  hash_service.capnp  meson.build  service.hpp  shm_transport.cpp  shm_transport.hpp
src/server/: main.cpp  meson.build  server.cpp  server.hpp
src/transport/: benchmark_transport.cpp  benchmark_transport.hpp  meson.build  rpc_session.cpp  rpc_session.hpp  server_transport.cpp  server_transport.hpp  shm_transport.cpp  shm_transport.hpp  uri.cpp  uri.hpp
subprojects/: capnproto.wrap
tests/: meson.build  test_main.cpp
